# FastApi_tasks_app

./: .docker_env  .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  main.py  pyproject.toml
db/: db.py
docker_scripts/: app.sh  celery.sh  celerybeat.sh
migrations/: env.py
migrations/versions/: 2023_09_30_0144-cf52931a86bb_database_initialization.py  2023_09_30_1449-80530957d835_notifications_table_fixes.py  2023_10_01_2025-0dfeed7d6ef5_database_initialization.py  a36aae94e6ad_database_initialization.py  b4aca2d3f6e0_database_initialization.py
models/: notification_types.py  notifications.py  tasks.py  tasks_attachments.py  tokens.py  users.py
src/: enums.py
src/api/: __init__.py  dependencies.py  index.py  routers.py
src/api/tasks/: __init__.py  create.py  router.py
src/api/users/: __init__.py  confirm_email.py  delete.py  get.py  get_all.py  get_all_paginated.py  login.py  registration.py  update_info.py  update_password.py
src/db/: db.py
src/models/: notification_types.py  notifications.py  tasks.py  tasks_attachments.py  tokens.py  users.py
src/redis_worker/: redis_worker.py
src/repositories/: notification_types.py  notifications.py  tasks_attachments.py  tokens.py
src/schemas/: base.py  notifications.py  tasks.py  tokens.py  users.py
src/services/: notifications.py  notifications_types.py  tasks.py  tokens.py  users.py
src/tasks/: celery_worker.py  notifications_tasks.py
src/utils/: create_response.py  email_worker.py  notifications.py  redis.py  repository.py  unitofwork.py  user_authorization.py
