[tool.poetry]
name = "fastapi-tasks-app"
version = "0.1.0"
description = ""
authors = ["Alexey <97658978+SAtbish@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "fastapi_tasks_app"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
